--- a/public/scss/base/buttons.scss
+++ b/public/scss/base/buttons.scss
@@ -1,3 +1,13 @@
+#header-contextmenu {
+    background-color: #ff8250;
+    aspect-ratio: 1/1;
+    height: 50px;
+    border-radius: 15px;
+    color: #ffffff;
+    border: none;
+    font-size: 2rem;
+}
+
 .dropdownbutton {
     //border: 0.5px solid #70707080;
     border: none;
@@ -5,6 +15,14 @@
     border-radius: 5px;
     color: #707070;
     line-height: 13px;
+}
+.dropleftbutton {
+    border: none;
+    background-color: #b9b9b980;
+    border-radius: 5px;
+    color: #707070;
+    line-height: 13px;
+    float: right;
 }
 
 .kanban-column-addbtn, .kanban-column-delbtn {
