--- a/public/scss/base/queries.scss
+++ b/public/scss/base/queries.scss
@@ -91,6 +91,9 @@
             border-radius: 60px;
             font-size: 2rem;
         }
+    .kanban-entryheader > button {
+        font-size: 1rem;
+    }
         
     #activetask-container {
         display: block;
