query finalisation again!

--- a/public/scss/base/queries.scss
+++ b/public/scss/base/queries.scss
@@ -69,9 +69,10 @@
             //width:100px;
         }
         #taskadd-buttondiv > button {
-            font-size: 1.4rem;
+            font-size: 1.5rem;
             width: min-content;
             margin: 10px 10px 10px 10px;
+            height: 60px;
         }
     .taskadd-button {
         position:sticky;
